docs(spacing): ensure icons retain their spacing

--- a/docs/src/client/styles/mains/customize.less
+++ b/docs/src/client/styles/mains/customize.less
@@ -1,6 +1,6 @@
 .main-customize {
-	h2 { .rb-icon { font-size: 18px; top: -5px; margin-right: 6px; } }
-	h3 { .rb-icon { font-size: 13px; top: -4px; margin-right: 6px; } }
+	h2 { .rb-icon { font-size: 18px; top: -5px; } }
+	h3 { .rb-icon { font-size: 13px; top: -4px; } }
 	h4 {
 		.sep {
 			position: relative;
